Adding UI to Rock paper scissors

--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="javascript.js">
+   <script src="javascript.js" defer>
     </script>
-    <h3>Play Game in Console.</h3>
+    <h1>Rock Paper Scissors</h1>
+
+    <h3>Play by selcting your move</h3>
+    <div>
+    <button id="pl"> Play</button>
+</div>
+<div class="choice">
+    <button id="r">Rock</button>
+    <button id="p">Paper</button>
+    <button id="s">Scissors</button>
+</div>
+    <div id ="res">
+        
+    </div>
+   
 </body>
 </html>
